--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -20,8 +20,9 @@ $box-background-color: $link;
 $tabs-toggle-link-active-background-color: transparent;
 $tabs-boxed-link-hover-background-color: $info;
 
-$button-color: $dark;
+$button-color: $info;
 $button-background-color: transparent;
 $button-border-color: $link;
+$button-border-width: 3px;
 $button-hover-border-color: $info;
 $button-hover-color: $success;
